--- a/src/app/components/preview/preview.component.html
+++ b/src/app/components/preview/preview.component.html
@@ -1,2 +1,6 @@
-<p>Preview My Image!</p>
-<img *ngIf="file" [src]="file" alt="my-image" height="300" width="400" />
+<p>Preview My Video!</p>
+<video width="320" height="240" controls>
+  <source src="{{ file }}" type="video/mp4" />
+  <source src="{{ file }}" type="video/ogg" />
+  Your browser does not support the video tag.
+</video>
